k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment


metadata:
  name: frontend



spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend



  template:
    metadata:
      labels:
        app: frontend



    spec:
      containers:

      - name: frontend
        image: storysmith-frontend:latest
        ports:
        - containerPort: 80
